# code_generator

./: README.md  pyproject.toml  release_package.py  run_tests.py  setup.py
.github/workflows/: python-app.yml
src/code_gen/core/: source_file.py
src/code_gen/cpp/: __init__.py  array_generator.py  class_generator.py  enum_generator.py  function_generator.py  language_element.py  scope_generator.py  type_base_generator.py  variable_generator.py
src/code_generation/: __init__.py
src/code_generation/core/: __init__.py  code_formatter.py  source_file.py
src/code_generation/cpp/: array_generator.py  class_generator.py  enum_generator.py  function_generator.py  language_element.py  scope_generator.py  source_file.py  variable_generator.py
src/examples/: cpp_array.py  cpp_class.py  cpp_enum.py  cpp_function.py
test/: comparing_tools.py  create_assets.py
test/cpp/: test_cpp_array_writer.py  test_cpp_class_writer.py  test_cpp_enum_writer.py  test_cpp_file.py  test_cpp_function_writer.py  test_cpp_scope_writer.py  test_cpp_type_gen.py  test_cpp_variable_writer.py
